@@ -2,8 +2,9 @@
 ##parameters=text_format, text, file='', SafetyBelt='', change_and_view=''
 ##title=Edit a document
 ##
-from Products.CMFCore.CMFCoreExceptions import CMFResourceLockedError
+from Products.CMFCore.CMFCoreExceptions import EditingConflict
 from Products.CMFCore.CMFCoreExceptions import IllegalHTML
+from Products.CMFCore.CMFCoreExceptions import ResourceLockedError
 from Products.CMFDefault.utils import scrubHTML
 from Products.PythonScripts.standard import urlencode
 
@@ -14,7 +15,7 @@ try:
                 , file
                 , safety_belt=SafetyBelt
                 )
-except (CMFResourceLockedError, 'EditingConflict', IllegalHTML), msg:
+except (ResourceLockedError, EditingConflict, IllegalHTML), msg:
     message = msg
     action_id = 'edit'
 else:
